...
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="?attr/colorPrimary"
            app:toolbarId="@id/toolbar">

            <ImageView
                android:id="@+id/iv_backdrop"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:contentDescription="@string/backdrop_movie"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

...
                app:navigationIcon="@drawable/ic_arrow_back_white"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/save_movie"
        android:src="@drawable/ic_baseline_favorite_border_24_white"
        app:backgroundTint="@color/teal_700"
...
